Show city or country in visitor details

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -254,6 +254,12 @@ ol.visitorLog p {
   display: block;
 }
 
+.visitor-log-ip-location img.flag {
+  border: 1px solid lightgray;
+  top: 2px;
+  position: relative;
+}
+
 .visitor-log-page-list {
   position:relative;
   margin-top: 7px;
