--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -331,6 +331,10 @@ a.visitor-log-visitor-profile-link {
     height: 16px;
 }
 
+.visitorLogIconWithDetails.flag {
+  display: none;
+}
+
 .visitorLogIconWithDetails.flag>img {
     border: 1px solid lightgray;
 }
